--- a/about.html
+++ b/about.html
@@ -60,7 +60,7 @@
                                         <!-- <li><a href="workshop.html">Workshop</a></li> -->
                                         <li><a href="speaker.html">Guest Lecture</a></li>
                                         <li><a href="callforpaper.html">Call For Paper</a></li>
-                                        <!-- <li class="dropdown">
+                                        <li class="dropdown">
                                             <a href="#">Guidelines</a>
                                             <ul>
                                                 <li>
@@ -73,7 +73,7 @@
                             >
                           </li>
                         </ul>
-                      </li> -->
+                      </li>
                       <li><a href="gallery.html">Gallery</a></li>
                       <li><a href="contact.html">Contact Us</a></li>
                                     </ul>
@@ -359,11 +359,27 @@
                             </div>
                             <div class="lower-content">
                                 <h3><a href="#">Dr. Priyanka Paliwal</a></h3>
-                                <div class="designation">Finance Chair</div>
+                                <div class="designation">Program Chair</div>
                             </div>
                         </div>
                     </div>
 
+
+                     <!-- Speaker Block -->
+                     <div class="speaker-block-two col-lg-4 col-md-6 col-sm-12">
+                        <div class="inner-box">
+                            <div class="dots-one"></div>
+                            <div class="dots-two"></div>
+                            <div class="image">
+                                <img src="VijayBhaskarSemwal.jpg" alt="" />
+                            </div>
+                            <div class="lower-content">
+                                <h3><a href="#">Dr. Vijay Bhaskar Semwal
+                                </a></h3>
+                                <div class="designation">Finance Chair</div>
+                            </div>
+                        </div>
+                    </div>
                     <!-- Speaker Block -->
                     <div class="speaker-block-two col-lg-4 col-md-6 col-sm-12">
                         <div class="inner-box">
@@ -757,8 +773,8 @@
 
                     <div class="newsletter-form">
                         <div class="form-group">
-                            <!-- <a href="docs/CallForPapers.pdf" target="_blank" class="theme-btn btn-style-one">Download
-                                Brochure</a> -->
+                            <a href="docs/Call_for_papers_Final[11}1.pdf" target="_blank" class="theme-btn btn-style-one">Download
+                                Brochure</a>
                         </div>
                     </div>
                 </div>
