--- a/speaker.html
+++ b/speaker.html
@@ -63,7 +63,7 @@
                       <a href="speaker.html">Guest Lecture</a>
                     </li>
                     <li><a href="callforpaper.html">Call For Paper</a></li>
-                    <!-- <li class="dropdown">
+                    <li class="dropdown">
                                             <a href="#">Guidelines</a>
                                             <ul>
                                                 <li>
@@ -76,7 +76,7 @@
                             >
                           </li>
                         </ul>
-                      </li> -->
+                      </li>
                       <li><a href="gallery.html">Gallery</a></li>
                       <li><a href="contact.html">Contact Us</a></li>
                   </ul>
@@ -1228,7 +1228,7 @@
 
           <div class="newsletter-form">
             <div class="form-group">
-              <!-- <a href="docs/CallForPapers.pdf" target="_blank" class="theme-btn btn-style-one">Download Brochure</a> -->
+              <a href="docs/Call_for_papers_Final[11}1.pdf" target="_blank" class="theme-btn btn-style-one">Download Brochure</a>
             </div>
           </div>
         </div>
