--- a/gallery.html
+++ b/gallery.html
@@ -60,7 +60,7 @@
                                         <!-- <li><a href="workshop.html">Workshop</a></li> -->
                                         <li><a href="speaker.html">Guest Lecture</a></li>
                                         <li><a href="callforpaper.html">Call For Paper</a></li>
-                                        <!-- <li class="dropdown">
+                                        <li class="dropdown">
                                             <a href="#">Guidelines</a>
                                             <ul>
                                                 <li>
@@ -73,7 +73,7 @@
                             >
                           </li>
                         </ul>
-                      </li> -->
+                      </li>
                                         <li class="current">
                                             <a href="gallery.html">Gallery</a>
                                         </li>
@@ -630,8 +630,8 @@
 
                     <div class="newsletter-form">
                         <div class="form-group">
-                            <!-- <a href="docs/CallForPapers.pdf" target="_blank" class="theme-btn btn-style-one">Download
-                                Brochure</a> -->
+                            <a href="docs/Call_for_papers_Final[11}1.pdf" target="_blank" class="theme-btn btn-style-one">Download
+                                Brochure</a>
                         </div>
                     </div>
                 </div>
