--- a/index.html
+++ b/index.html
@@ -63,12 +63,12 @@
                     <!-- <li><a href="workshop.html">Workshop</a></li> -->
                     <li><a href="speaker.html">Guest Lecture</a></li>
                      <li><a href="callforpaper.html">Call For Paper</a></li>
-                     <!-- <li class="dropdown"><a href="#">Guidelines</a>
+                     <li class="dropdown"><a href="#">Guidelines</a>
                             <ul>
                               <li><a href="guidelines.html">Copyright Transfer and Registration</a></li>
                               <li><a href="guidelines2.html">Camera Ready Submission and PDF Express</a></li>
                             </ul>
-                          </li> -->
+                          </li>
                     <li><a href="gallery.html">Gallery</a></li>
                     <li><a href="contact.html">Contact Us</a></li>
                   </ul>
@@ -167,6 +167,7 @@
               <div class="buttons-box clearfix">
                 <a href="https://ieeenitb.com/" target="_blank"><span class="theme-btn btn-style-two">Visit
                     IEEE-MSB</span></a>
+                <a href="docs/Call_for_papers_Final[11}1.pdf" target="_blank"><span class="theme-btn btn-style-two">Call for Paper</span></a>
                 <!-- <span class="theme-btn btn-style-two" style="cursor: not-allowed ;">We Will Be Accepting Registrations Soon</span> -->
                 <!-- <a href="https://youtu.be/iTubr50b2Z4" target="_blank"
                                     class="theme-btn btn-style-three"><span>video presentation</span></a> -->
@@ -1929,7 +1930,7 @@
 
           <div class="newsletter-form">
             <div class="form-group">
-              <a href="" target="_blank" class="theme-btn btn-style-one">Download Brochure</a>
+              <a href="docs/Call_for_papers_Final[11}1.pdf" target="_blank" class="theme-btn btn-style-one">Download Brochure</a>
             </div>
           </div>
         </div>
