--- a/about.html
+++ b/about.html
@@ -349,6 +349,23 @@
                         </div>
                     </div>
 
+                      <!-- Speaker Block -->
+                      <div class="speaker-block-two col-lg-4 col-md-6 col-sm-12">
+                        <div class="inner-box">
+                            <div class="dots-one"></div>
+                            <div class="dots-two"></div>
+                            <div class="image">
+                                <img src="VijayBhaskarSemwal.jpg" alt="" />
+                            </div>
+                            <div class="lower-content">
+                                <h3><a href="#">Dr. Vijay Bhaskar Semwal</a></h3>
+                                <div class="designation">Finance Chair</div>
+                            </div>
+                        </div>
+                    </div>
+
+                    <!-- Speaker Block -->
+
                     <!-- Speaker Block -->
                     <div class="speaker-block-two col-lg-4 col-md-6 col-sm-12">
                         <div class="inner-box">
