--- a/callforpaper.html
+++ b/callforpaper.html
@@ -456,7 +456,7 @@
                                 <div class="content-inner">
                                     <!-- Program Info -->
                                     <div class="program-info">
-                                        REGISTRATION STARTED<span class="time">End date:- 30 DEC 2023</span><span class="dott"></span>
+                                        REGISTRATION STARTED<span class="time">26 NOV 2023</span><span class="dott"></span>
                                     </div>
                                     <h3><a>Registration was on Microsoft CMT.</a></h3>
                                 </div>
@@ -471,7 +471,7 @@
                                 <div class="content-inner">
                                     <!-- Program Info -->
                                     <div class="program-info" style="left: 538px">
-                                        Paper Submission<span class="time">TBD</span><span class="dott"></span>
+                                        Paper Submission<span class="time">20 DEC 2023</span><span class="dott"></span>
                                     </div>
                                     <h3><a>Conference will start accepting papers soon.</a></h3>
                                 </div>
@@ -486,7 +486,7 @@
                                 <div class="content-inner">
                                     <!-- Program Info -->
                                     <div class="program-info" style="left: -250px">
-                                        REVIEW<span class="dott" style="right: -64px"></span>
+                                        REVIEW<span class="time">TBD</span><span class="dott" style="right: -64px"></span>
                                     </div>
                                     <h3><a>Paper is blind reviewed by experts.</a></h3>
                                 </div>
@@ -501,7 +501,7 @@
                                 <div class="content-inner">
                                     <!-- Program Info -->
                                     <div class="program-info">
-                                        PUBLISH<span class="time">will be informed.</span><span class="dott"></span>
+                                        PUBLISH<span class="time">5 JAN 2024</span><span class="dott"></span>
                                     </div>
                                     <h3>
                                         <a>Accepted papers will be published in the SCEECS 2024
@@ -518,7 +518,7 @@
                                 <div class="content-inner">
                                     <!-- Program Info -->
                                     <div class="program-info" style="left: -457px">
-                                        Camera Ready Submissions <span class="dott" style="right: -64px"></span>
+                                        Camera Ready Submissions<span class="time">20 JAN 2024</span> <span class="dott" style="right: -64px"></span>
                                     </div>
                                     <h3><a>Submissions by camera are going on.</a></h3>
                                 </div>
