--- a/index.html
+++ b/index.html
@@ -349,7 +349,7 @@
               <div class="buttons-box clearfix">
                 <a href="https://ieeenitb.com/" target="_blank"><span class="theme-btn btn-style-two">Visit
                     IEEE-MSB</span></a>
-                <a href="docs/Call_for_papers_Final[11}1.pdf" target="_blank"><span class="theme-btn btn-style-two">Call for Paper</span></a>
+                <a href="docs/Call_for_papers_Final[11}1.pdf" target="_blank"><span class="theme-btn btn-style-three ">Call for Paper</span></a>
                 <!-- <span class="theme-btn btn-style-two" style="cursor: not-allowed ;">We Will Be Accepting Registrations Soon</span> -->
                 <!-- <a href="https://youtu.be/iTubr50b2Z4" target="_blank"
                                     class="theme-btn btn-style-three"><span>video presentation</span></a> -->
@@ -2161,7 +2161,7 @@
                                         <li><a href="about.html">About</a></li>
                                         <!-- <li><a href="workshop.html">Workshop</a></li> -->
                                         <li><a href="speaker.html">Guest Lecture</a></li>
- <li>
+ <li>                                   <li><a href="callforpaper.html">Call for Paper</a></li>
                                             <a href="gallery.html">Gallery</a>
                                         </li>
                                         
