--- a/contact.html
+++ b/contact.html
@@ -400,7 +400,7 @@
                                         <li><a href="about.html">About</a></li>
                                         <!-- <li><a href="workshop.html">Workshop</a></li> -->
                                         <li><a href="speaker.html">Guest Lecture</a></li>
- <li>
+ <li>                                       <li><a href="callforpaper.html">Call for Paper</a></li>
                                             <a href="gallery.html">Gallery</a>
                                         </li>
                                         
