--- a/speaker.html
+++ b/speaker.html
@@ -1275,6 +1275,7 @@
                                         <li><a href="about.html">About</a></li>
                                         <!-- <li><a href="workshop.html">Workshop</a></li> -->
                                         <li><a href="speaker.html">Guest Lecture</a></li>
+ <li>                                   <li><a href="callforpaper.html">Call for Paper</a></li>
  <li>
                                             <a href="gallery.html">Gallery</a>
                                         </li>
