--- a/buyticket.html
+++ b/buyticket.html
@@ -66,7 +66,7 @@
                                         <li><a href="workshop.html">About</a></li>
                                         <li><a href="speaker.html">Guest Lecture</a></li>
                                         <li><a href="callforpaper.html">Call For Paper</a></li>
-                                        <li class="dropdown"><a href="#">Guidelines</a>
+                                        <!-- <li class="dropdown"><a href="#">Guidelines</a>
                                             <ul>
                                                 <li><a href="guidelines.html">Copyright Transfer and Registration</a>
                                                 </li>
@@ -74,7 +74,7 @@
                                                         Express</a></li>
 
                                             </ul>
-                                        </li>
+                                        </li> -->
                                         <li><a href="gallery.html">Gallery</a></li>
                                         <li><a href="contact.html">Contact Us</a></li>
                                     </ul>
