--- a/workshop.html
+++ b/workshop.html
@@ -59,8 +59,8 @@
                                         <li><a href="about.html">About</a></li>
                                         <li class="current"><a href="about.html">Workshop</a></li>
                                         <li><a href="speaker.html">Guest Lecture</a></li>
-                                        <!-- <li><a href="callforpaper.html">Call For Paper</a></li> -->
-                                        <!-- <li class="dropdown">
+                                        <li><a href="callforpaper.html">Call For Paper</a></li>
+                                        <li class="dropdown">
                                             <a href="#">Guidelines</a>
                                             <ul>
                                                 <li>
@@ -73,7 +73,7 @@
                             >
                           </li>
                         </ul>
-                      </li> -->
+                      </li>
                                         <li><a href="gallery.html">Gallery</a></li>
                                         <li><a href="contact.html">Contact Us</a></li>
                                     </ul>
