--- a/callforpaper.html
+++ b/callforpaper.html
@@ -62,7 +62,7 @@
                                         <li class="current">
                                             <a href="callforpaper.html">Call For Paper</a>
                                         </li>
-                                        <!-- <li class="dropdown">
+                                        <li class="dropdown">
                                             <a href="#">Guidelines</a>
                                             <ul>
                                                 <li>
@@ -72,7 +72,7 @@
                                                     <a href="guidelines2.html">Camera Ready Submission and PDF Express</a>
                                                 </li>
                                             </ul>
-                                        </li> -->
+                                        </li>
                                         <li><a href="gallery.html">Gallery</a></li>
                                         <li><a href="contact.html">Contact Us</a></li>
                                     </ul>
