--- a/about.html
+++ b/about.html
@@ -60,7 +60,7 @@
                                         <!-- <li><a href="workshop.html">Workshop</a></li> -->
                                         <li><a href="speaker.html">Guest Lecture</a></li>
                                         <li><a href="callforpaper.html">Call For Paper</a></li>
-                                        <!-- <li class="dropdown">
+                                        <li class="dropdown">
                                             <a href="#">Guidelines</a>
                                             <ul>
                                                 <li>
@@ -73,7 +73,7 @@
                             >
                           </li>
                         </ul>
-                      </li> -->
+                      </li>
                       <li><a href="gallery.html">Gallery</a></li>
                       <li><a href="contact.html">Contact Us</a></li>
                                     </ul>
