--- a/callforpaper.html
+++ b/callforpaper.html
@@ -62,7 +62,7 @@
                                         <li class="current">
                                             <a href="callforpaper.html">Call For Paper</a>
                                         </li>
-                                        <li class="dropdown">
+                                        <!-- <li class="dropdown">
                                             <a href="#">Guidelines</a>
                                             <ul>
                                                 <li>
@@ -72,7 +72,7 @@
                                                     <a href="guidelines2.html">Camera Ready Submission and PDF Express</a>
                                                 </li>
                                             </ul>
-                                        </li>
+                                        </li> -->
                                         <li><a href="gallery.html">Gallery</a></li>
                                         <li><a href="contact.html">Contact Us</a></li>
                                     </ul>
@@ -458,7 +458,7 @@
                                     <div class="program-info">
                                         REGISTRATION STARTED<span class="time">26 NOV 2023</span><span class="dott"></span>
                                     </div>
-                                    <h3><a>Registration is going on Microsoft CMT.</a></h3>
+                                    <h3><a>Get registered on Microsoft CMT.</a></h3>
                                 </div>
                             </div>
                         </div>
@@ -471,9 +471,9 @@
                                 <div class="content-inner">
                                     <!-- Program Info -->
                                     <div class="program-info" style="left: 538px">
-                                        Paper Submission<span class="time">20 DEC 2023</span><span class="dott"></span>
+                                       SUBMIT PAPER<span class="time">20 DEC 2023</span><span class="dott"></span>
                                     </div>
-                                    <h3><a>Conference will start accepting papers soon.</a></h3>
+                                    <h3><a>Submit your paper through Microsoft CMT.</a></h3>
                                 </div>
                             </div>
                         </div>
@@ -512,11 +512,11 @@
                         </div>
                     </div>
 
-                    <div class="programs-block">
+                    <!-- <div class="programs-block">
                         <div class="inner-block clearfix">
                             <div class="content col-lg-6 col-md-12 col-sm-12">
                                 <div class="content-inner">
-                                    <!-- Program Info -->
+                                    Program Info
                                     <div class="program-info" style="left: -457px">
                                         Camera Ready Submissions<span class="time">20 JAN 2024</span> <span class="dott" style="right: -64px"></span>
                                     </div>
@@ -524,7 +524,7 @@
                                 </div>
                             </div>
                         </div>
-                    </div>
+                    </div> -->
                 </div>
 
                 <div class="btn-box text-center">
