--- a/contact.html
+++ b/contact.html
@@ -21,7 +21,7 @@
 <body>
     <div class="page-wrapper">
         <!-- Preloader -->
-        <div class="preloader"></div>
+        <!-- <div class="preloader"></div> -->
 
         <!-- Main Header-->
         <header class="main-header header-style-one">
@@ -60,7 +60,7 @@
                                        
                                         <li><a href="speaker.html">Guest Lecture</a></li>
                                         <li><a href="callforpaper.html">Call For Paper</a></li>
-                                        <li class="dropdown">
+                                        <!-- <li class="dropdown">
                                             <a href="#">Guidelines</a>
                                             <ul>
                                                 <li>
@@ -73,7 +73,7 @@
                             >
                           </li>
                         </ul>
-                      </li>
+                      </li> -->
                       <li><a href="gallery.html">Gallery</a></li>
                                         <li class="current">
                                             <a href="contact.html">Contact Us</a>
