--- a/index.html
+++ b/index.html
@@ -265,12 +265,12 @@
                     <!-- <li><a href="workshop.html">Workshop</a></li> -->
                     <li><a href="speaker.html">Guest Lecture</a></li>
                      <li><a href="callforpaper.html">Call For Paper</a></li>
-                     <li class="dropdown"><a href="#">Guidelines</a>
+                     <!-- <li class="dropdown"><a href="#">Guidelines</a>
                             <ul>
                               <li><a href="guidelines.html">Copyright Transfer and Registration</a></li>
                               <li><a href="guidelines2.html">Camera Ready Submission and PDF Express</a></li>
                             </ul>
-                          </li>
+                          </li> -->
                     <li><a href="gallery.html">Gallery</a></li>
                     <li><a href="contact.html">Contact Us</a></li>
                   </ul>
