--- a/index.html
+++ b/index.html
@@ -2224,7 +2224,7 @@
                 <p id="title">International IEEE Students' Conference SCEECS'24</p>
                 <p class="imagebox"><img src="logo.png" alt=""></p>
                 <p id="mainHeading">Call For Papers</p>
-                <p id="disc">Learn, Share, Innovate - SCEECS 2024 is Here!</p>
+                <p id="disc">SCEECS 2024 is Here!</p>
                 <div id="btn">
                     <a href="https://sceecs.ieeenitb.com/callforpaper.html" target="_blank"><button>Call For Papers</button></a>
                     <a href="docs/Call_for_papers_Final[11}1.pdf" target="_blank"><button>Brochure</button></a>
