--- a/guidelines.html
+++ b/guidelines.html
@@ -133,7 +133,7 @@
                     <!--Logo-->
                     <div class="logo pull-left">
                         <a href="index.html" class="img-responsive"><img src="images/small-logo.png" alt="logo"
-                                title=""></a>
+                                title="" style="width: 80px; height: 56px;"></a>
                     </div>
 
                     <!--Right Col-->
