--- a/index.html
+++ b/index.html
@@ -2051,7 +2051,7 @@
       </div>
     </section>
     <!-- Fluid Section One -->
-    <section class="fluid-section-two" style="display: none;">
+    <section class="fluid-section-two" >
       <!-- Section Icons -->
       <div class="section-icons parallax-scene-3">
         <!-- Icon One -->
@@ -2065,7 +2065,7 @@
       </div>
       <div class="outer-section clearfix">
         <!--Image Column-->
-        <div class="image-column" style="background-image: url(images/CA_3.png)">
+        <div class="image-column" style="background-image: url(images/CA_3.jpeg)">
         </div>
         <!--End Image Column-->
         <!--Content Column-->
@@ -2080,28 +2080,22 @@
             </div>
             <div class="text">
               <p>
-                It’s time to advance a step ahead in your career game! Because
-                IEEE MANIT Student Branch (MSB) is offering you a chance to
-                become more than a generic college student.
+                An opportunity to soar above the rest and shine among your peers! IEEE MANIT Student Branch returns with an invitation to explore the realm of technocrats, gaining recognition in your college by spreading the roots of IEEE-MSB's legacy your way.
               </p>
 
               <p>
-                Expand your network, and improve your skills by helping us
-                bring the legacy of IEEE to your college. IEEE MSB is central
-                India’s largest technical society and guarantees growth to
-                everyone associated. Associate with us today by becoming our
-                Campus Ambassador.
+                Envision yourself as the driving head behind sparking curiosity and contributing to a revolutionary research conference that propels our nation's technical odyssey forward. Embrace the role of being at the forefront as a Campus Ambassador for SCEECS'24 - IEEE-MSB's premier conference, driving the narrative of innovation and progress.
               </p>
 
               <div class="fluid-list">
                 <span>All CA’s will be receiving these promising benefits:</span>
-                <li><strong>Recommendation letter to top off your resume.</strong></li>
-                <li><strong>Certificates.</strong></li>
-                <li><strong>Rewards and goodies for the best performing CA's.</strong></li>
+                <li><strong>Recommendation letters to elevate your resume.</strong></li>
+                <li><strong>Certificates for your accomplished work.</strong></li>
+                <li><strong>Rewards and goodies for the best performing CAS.</strong></li>
               </div>
             </div>
             <div class="btnca">
-              <a href="https://forms.gle/VLMDwEnSaUY4crC39" class="theme-btn btn-style-one">Click here to register</a>
+              <a href="https://forms.gle/tC5vfofKKQJUnMKF9" class="theme-btn btn-style-one">Click here to register</a>
             </div>
           </div>
         </div>
