updated call for paper

--- a/callforpaper.html
+++ b/callforpaper.html
@@ -18,6 +18,24 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0" />
 </head>
 
+<style>
+    @media screen and (min-width:1023px) {
+        .specialBox{
+            left: -679px !important;
+        /* border: 2px solid; */
+        padding-left: 2px;
+        width: 608px;
+        }
+        .spcialDottRegistration{
+            right: -10px !important; 
+        }
+        .spcialDottReview{
+            right: -162px !important;
+        }
+    }
+
+</style>
+
 <body>
     <div class="page-wrapper">
         <!-- Preloader -->
@@ -456,7 +474,7 @@
                                 <div class="content-inner">
                                     <!-- Program Info -->
                                     <div class="program-info">
-                                        REGISTRATION STARTED<span class="time">26 NOV 2023</span><span class="dott"></span>
+                                        REGISTRATION STARTED<span class="time">26 NOV 2023</span><span class="dott spcialDottRegistration"></span>
                                     </div>
                                     <h3><a>Get registered on Microsoft CMT.</a></h3>
                                 </div>
@@ -470,7 +488,7 @@
                             <div class="content col-lg-6 col-md-12 col-sm-12">
                                 <div class="content-inner">
                                     <!-- Program Info -->
-                                    <div class="program-info" style="left: 538px">
+                                    <div class="program-info">
                                        SUBMIT PAPER<span class="time">20 DEC 2023</span><span class="dott"></span>
                                     </div>
                                     <h3><a>Submit your paper through Microsoft CMT.</a></h3>
@@ -482,11 +500,12 @@
                     <!-- Programs Block -->
                     <div class="programs-block">
                         <div class="inner-block clearfix">
-                            <div class="content col-lg-6 col-md-12 col-sm-12">
-                                <div class="content-inner">
+                            <div class="content col-lg-6 col-md-12 col-sm-12 " >
+                                <div class="content-inner" >
                                     <!-- Program Info -->
-                                    <div class="program-info" style="left: -250px">
-                                        REVIEW<span class="time">TBD</span><span class="dott" style="right: -64px"></span>
+                                    <div class="program-info" style="padding: 0 4px">
+                                        REVIEW<span class="time">WILL BE INFORMED</span>
+                                        <span class="dott spcialDottReview"></span>
                                     </div>
                                     <h3><a>Paper is blind reviewed by experts.</a></h3>
                                 </div>
@@ -501,7 +520,7 @@
                                 <div class="content-inner">
                                     <!-- Program Info -->
                                     <div class="program-info">
-                                        PUBLISH<span class="time">5 JAN 2024</span><span class="dott"></span>
+                                        PUBLISH<span class="time">WILL BE INFORMED</span><span class="dott"></span>
                                     </div>
                                     <h3>
                                         <a>Accepted papers will be published in the SCEECS 2024
@@ -512,19 +531,21 @@
                         </div>
                     </div>
 
-                    <!-- <div class="programs-block">
+                    <!-- Programs Block -->
+                    <div class="programs-block">
                         <div class="inner-block clearfix">
                             <div class="content col-lg-6 col-md-12 col-sm-12">
                                 <div class="content-inner">
-                                    Program Info
-                                    <div class="program-info" style="left: -457px">
-                                        Camera Ready Submissions<span class="time">20 JAN 2024</span> <span class="dott" style="right: -64px"></span>
+                                    <!-- Program Info -->
+                                    <!-- its media queries is on the top of the page -->
+                                    <div class="program-info specialBox"  >
+                                        Acceptance Notification and Camera Ready Submissions<span class="time">20 JAN 2024</span><span class="dott"></span>
                                     </div>
                                     <h3><a>Submissions by camera are going on.</a></h3>
                                 </div>
                             </div>
                         </div>
-                    </div> -->
+                    </div>
                 </div>
 
                 <div class="btn-box text-center">
