--- a/callforpaper.html
+++ b/callforpaper.html
@@ -33,6 +33,11 @@
             right: -162px !important;
         }
     }
+    @media screen and (max-width:1023px) {
+        .specialBoxCameraReady{
+            right: -5px !important;
+        }
+    }
 
 </style>
 
@@ -473,6 +478,7 @@
                             <div class="content col-lg-6 col-md-12 col-sm-12">
                                 <div class="content-inner">
                                     <!-- Program Info -->
+                                    <!-- added its media query in top of the file -->
                                     <div class="program-info">
                                         REGISTRATION STARTED<span class="time">26 NOV 2023</span><span class="dott spcialDottRegistration"></span>
                                     </div>
@@ -539,9 +545,25 @@
                                     <!-- Program Info -->
                                     <!-- its media queries is on the top of the page -->
                                     <div class="program-info specialBox"  >
-                                        Acceptance Notification and Camera Ready Submissions<span class="time">20 JAN 2024</span><span class="dott"></span>
+                                        Acceptance Notification<span class="time">5 JAN 2024</span><span class="dott"></span>
                                     </div>
-                                    <h3><a>Submissions by camera are going on.</a></h3>
+                                    <h3><a>Acceptance Notification will pop up soon.</a></h3>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+
+                    <!-- Programs Block -->
+                    <div class="programs-block style-two">
+                        <div class="inner-block clearfix">
+                            <div class="content col-lg-6 col-md-12 col-sm-12">
+                                <div class="content-inner">
+                                    <!-- Program Info -->
+                                    <!-- added its media query in top of the file -->
+                                    <div class="program-info specialBoxCameraReady" style="right: -420px;">
+                                        Camera Ready Submissions<span class="time">20 JAN 2024</span><span class="dott" ></span>
+                                    </div>
+                                    <h3><a>Submissions by camera will start soon.</a></h3>
                                 </div>
                             </div>
                         </div>
