--- a/callforpaper.html
+++ b/callforpaper.html
@@ -21,7 +21,7 @@
 <style>
     @media screen and (min-width:1023px) {
         .specialBox{
-            left: -679px !important;
+            right: -399px !important;
         /* border: 2px solid; */
         padding-left: 2px;
         width: 608px;
@@ -31,6 +31,15 @@
         }
         .spcialDottReview{
             right: -162px !important;
+        }
+        .specialBoxCameraReady{
+            left: -419px !important;
+        }
+        .paperPresentationBox{
+            right: -348px !important;
+        }
+        .publishBox{
+            left: -277px !important; 
         }
     }
     @media screen and (max-width:1023px) {
@@ -525,24 +534,6 @@
                             <div class="content col-lg-6 col-md-12 col-sm-12">
                                 <div class="content-inner">
                                     <!-- Program Info -->
-                                    <div class="program-info">
-                                        PUBLISH<span class="time">WILL BE INFORMED</span><span class="dott"></span>
-                                    </div>
-                                    <h3>
-                                        <a>Accepted papers will be published in the SCEECS 2024
-                                            Conference Proceedings and submitted to IEEE Xplore.</a>
-                                    </h3>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-
-                    <!-- Programs Block -->
-                    <div class="programs-block">
-                        <div class="inner-block clearfix">
-                            <div class="content col-lg-6 col-md-12 col-sm-12">
-                                <div class="content-inner">
-                                    <!-- Program Info -->
                                     <!-- its media queries is on the top of the page -->
                                     <div class="program-info specialBox"  >
                                         Acceptance Notification<span class="time">5 JAN 2024</span><span class="dott"></span>
@@ -554,16 +545,52 @@
                     </div>
 
                     <!-- Programs Block -->
-                    <div class="programs-block style-two">
+                    <div class="programs-block">
                         <div class="inner-block clearfix">
                             <div class="content col-lg-6 col-md-12 col-sm-12">
                                 <div class="content-inner">
                                     <!-- Program Info -->
                                     <!-- added its media query in top of the file -->
-                                    <div class="program-info specialBoxCameraReady" style="right: -420px;">
+                                    <div class="program-info specialBoxCameraReady">
                                         Camera Ready Submissions<span class="time">20 JAN 2024</span><span class="dott" ></span>
                                     </div>
                                     <h3><a>Submissions by camera will start soon.</a></h3>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+
+                    <!-- Programs Block -->
+                    <div class="programs-block style-two">
+                        <div class="inner-block clearfix">
+                            <div class="content col-lg-6 col-md-12 col-sm-12">
+                                <div class="content-inner">
+                                    <!-- Program Info -->
+                                    <!-- its media queries is on the top of the page -->
+                                    <div class="program-info paperPresentationBox"  >
+                                        Paper Presentation<span class="time">24-25 
+                                            February, 2024</span><span class="dott"></span>
+                                    </div>
+                                    <h3><a>Acceptance Paper will be presented in conference in hybrid mode.</a></h3>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    
+                    <!-- Programs Block -->
+                    <div class="programs-block">
+                        <div class="inner-block clearfix">
+                            <div class="content col-lg-6 col-md-12 col-sm-12">
+                                <div class="content-inner">
+                                    <!-- Program Info -->
+                                    <!-- its media queries is on the top of the page -->
+                                    <div class="program-info publishBox">
+                                        PUBLISH<span class="time">WILL BE INFORMED</span><span class="dott"></span>
+                                    </div>
+                                    <h3>
+                                        <a>Accepted papers will be published in the SCEECS 2024
+                                            Conference Proceedings and submitted to IEEE Xplore.</a>
+                                    </h3>
                                 </div>
                             </div>
                         </div>
