--- a/callforpaper.html
+++ b/callforpaper.html
@@ -538,7 +538,7 @@
                                     <div class="program-info specialBox"  >
                                         Acceptance Notification<span class="time">5 JAN 2024</span><span class="dott"></span>
                                     </div>
-                                    <h3><a>Acceptance Notification will pop up soon.</a></h3>
+                                    <h3><a>Accepted papers will be notified through email.</a></h3>
                                 </div>
                             </div>
                         </div>
@@ -554,7 +554,7 @@
                                     <div class="program-info specialBoxCameraReady">
                                         Camera Ready Submissions<span class="time">20 JAN 2024</span><span class="dott" ></span>
                                     </div>
-                                    <h3><a>Submissions by camera will start soon.</a></h3>
+                                    <h3><a>Camera Ready Submission and Registration will be open for accepted papers.</a></h3>
                                 </div>
                             </div>
                         </div>
@@ -571,7 +571,7 @@
                                         Paper Presentation<span class="time">24-25 
                                             February, 2024</span><span class="dott"></span>
                                     </div>
-                                    <h3><a>Acceptance Paper will be presented in conference in hybrid mode.</a></h3>
+                                    <h3><a>Accepted Paper will be presented in conference in hybrid mode.</a></h3>
                                 </div>
                             </div>
                         </div>
