--- a/callforpaper.html
+++ b/callforpaper.html
@@ -571,7 +571,7 @@
                                         Paper Presentation<span class="time">24-25 
                                             February, 2024</span><span class="dott"></span>
                                     </div>
-                                    <h3><a>Accepted Paper will be presented in conference in hybrid mode.</a></h3>
+                                    <h3><a>Accepted Papers will be presented in conference in hybrid mode.</a></h3>
                                 </div>
                             </div>
                         </div>
