--- a/index.html
+++ b/index.html
@@ -68,6 +68,16 @@
        margin-top: 20px 0 20px 0;
        text-align: center;
    }
+   #deadlineDisc{
+    font-size: 1.3rem;
+    /* border: 2px solid red; */
+    text-align: center;
+   }
+   #deadlineDisc span{
+      /* font-size: 1.3rem; */
+      font-weight: 600;
+      /* color: red; */
+   }
    .imagebox{
        display: flex;
        align-items: center;
@@ -2218,6 +2228,7 @@
                 <p id="title">International IEEE Students' Conference SCEECS'24</p>
                 <p class="imagebox"><img src="logo.png" alt=""></p>
                 <p id="mainHeading">Call For Papers</p>
+                <p id="deadlineDisc">🚨 Deadline Extended! 📅 Submit Papers by <span>Dec 30!</span></p>
                 <p id="disc">SCEECS 2024 is Here!</p>
                 <div id="btn">
                     <a href="https://sceecs.ieeenitb.com/callforpaper.html" target="_blank"><button>Call For Papers</button></a>
