--- a/callforpaper.html
+++ b/callforpaper.html
@@ -623,16 +623,13 @@
                             <div class="separator"></div>
 
                             <p class="price-list" id="cfpp">
-                                SCEECS 2024 invites unpublished and original research papers from <b>Undergraduate,
-                                    Postgraduate and Doctoral students.</b><br /> For papers in which all authors are
-                                employed by the US government, the copyright notice is:
-                                U.S. Government work not protected by U.S. copyright <br /> For papers in which all
-                                authors are employed by a Crown government (UK, Canada, and Australia), the copyright
-                                notice is: 978-1-7281-9877-4/20/$31.00 ©2020 Crown<br /> For papers in which all authors
-                                are employed by the European Union, the copyright notice is: 978-1-7281-9877-4/20/$31.00
-                                ©2020 European Union <br /> For all other papers the copyright notice is:
-                                978-1-7281-9877-4/20/$31.00
-                                ©2020 IEEE
+                                For papers in which all authors are employed by the US government, the copyright notice is: U.S. Government work not
+protected by U.S. copyright
+For papers in which all authors are employed by a Crown government (UK, Canada, and Australia), the copyright notice is:
+979-8-3503-4846-0/24/$31.00 ©2024 Crown
+For papers in which all authors are employed by the European Union, the copyright notice is: 979-8-3503-4846-0/24/$31.00
+©2024 European Union
+For all other papers the copyright notice is: 979-8-3503-4846-0/24/$31.00 ©2024 IEEE
                             </p>
                             <a href="https://cmt3.research.microsoft.com/SCEECS2024"
                                 class="theme-btn btn-style-one">Submit Via Microsoft CMT</a>
