--- a/callforpaper.html
+++ b/callforpaper.html
@@ -30,16 +30,19 @@
             right: -10px !important; 
         }
         .spcialDottReview{
-            right: -162px !important;
+            right: -121px !important;
         }
         .specialBoxCameraReady{
-            left: -419px !important;
+            left: -513px !important;
         }
         .paperPresentationBox{
             right: -348px !important;
         }
         .publishBox{
             left: -277px !important; 
+        }
+        .reviewBox{
+            left: -272px !important;
         }
     }
     @media screen and (max-width:1023px) {
@@ -469,8 +472,8 @@
                             <div class="content col-lg-6 col-md-12 col-sm-12 " >
                                 <div class="content-inner" >
                                     <!-- Program Info -->
-                                    <div class="program-info" style="padding: 0 4px">
-                                        REVIEW<span class="time">WILL BE INFORMED</span>
+                                    <div class="program-info reviewBox" style="padding: 0 4px;">
+                                        REVIEW<span class="time">In Progress</span>
                                         <span class="dott spcialDottReview"></span>
                                     </div>
                                     <h3><a>Paper is blind reviewed by experts.</a></h3>
@@ -487,7 +490,7 @@
                                     <!-- Program Info -->
                                     <!-- its media queries is on the top of the page -->
                                     <div class="program-info specialBox"  >
-                                        Acceptance Notification<span class="time">15 JAN 2024</span><span class="dott"></span>
+                                        Acceptance Notification<span class="time">15 JAN - 30 JAN 2024</span><span class="dott"></span>
                                     </div>
                                     <h3><a>Accepted papers will be notified through email.</a></h3>
                                 </div>
@@ -503,7 +506,7 @@
                                     <!-- Program Info -->
                                     <!-- added its media query in top of the file -->
                                     <div class="program-info specialBoxCameraReady">
-                                        Camera Ready Submissions<span class="time">20 JAN 2024</span><span class="dott" ></span>
+                                        Camera Ready Submissions<span class="time">Will Be Informed to accepted papers via email.</span><span class="dott" ></span>
                                     </div>
                                     <h3><a>Camera Ready Submission and Registration will be open for accepted papers.</a></h3>
                                 </div>
