--- a/index.html
+++ b/index.html
@@ -642,19 +642,19 @@
               <div class="dots-one"></div>
               <div class="dots-two"></div>
               <div class="image">
-                <img src="images/gallery/sample.png" alt="" />
+                <img src="images/gl/love_babbar.jpg" alt="" />
                 <ul class="social-box">
                   <li>
-                    <a href="https://ieeenitb.com/" target="_blank"><i class="ri-linkedin-box-fill"></i></a>
+                    <a href="https://www.linkedin.com/in/love-babbar-38ab2887/?originalSubdomain=in" target="_blank"><i class="ri-linkedin-box-fill"></i></a>
                   </li>
                 </ul>
               </div>
               <div class="lower-content">
                 <h3>
-                  <a href="#popup_8" class="ts-image-popup">TBD</a>
+                  <a href="#popup_8" class="ts-image-popup">Love Babbar</a>
                 </h3>
                 <div class="designation">
-                  
+                  Founder of CodeHelp
                 </div>
               </div>
 
@@ -667,7 +667,7 @@
                         <img src="images/gallery/sample.png" alt="" />
                         <ul class="social-box">
                           <li>
-                            <a href="https://ieeenitb.com/" target="_blank"><i class="ri-linkedin-box-fill"></i></a>
+                            <a href="" target="_blank"><i class="ri-linkedin-box-fill"></i></a>
                           </li>
                         </ul>
                       </div>
@@ -712,19 +712,19 @@
               <div class="dots-one"></div>
               <div class="dots-two"></div>
               <div class="image">
-                <img src="images/gallery/sample.png" alt="" />
+                <img src="images/gl/lakshya_kumar.jpeg" alt="" />
                 <ul class="social-box">
                   <li>
-                    <a href="https://ieeenitb.com/" target="_blank"><i class="ri-linkedin-box-fill"></i></a>
+                    <a href="https://www.linkedin.com/in/lakshayk12/" target="_blank"><i class="ri-linkedin-box-fill"></i></a>
                   </li>
                 </ul>
               </div>
               <div class="lower-content">
                 <h3>
-                  <a href="#popup_8" class="ts-image-popup">TBD</a>
+                  <a href="#popup_8" class="ts-image-popup">Lakshya Kumar</a>
                 </h3>
                 <div class="designation">
-                  
+                  Instructor at CodeHelp
                 </div>
               </div>
 
