--- a/speaker.html
+++ b/speaker.html
@@ -168,21 +168,21 @@
                             <div class="dots-one"></div>
                             <div class="dots-two"></div>
                             <div class="image">
-                                <img src="sample.jpg" alt="" />
+                                <img src="images/gl/love_babbar.jpg" alt="" />
                                 <ul class="social-box">
                                     <li>
-                                        <a href="" target="_blank"><span class="fab fa-linkedin-in"></span
+                                        <a href="https://www.linkedin.com/in/love-babbar-38ab2887/?originalSubdomain=in" target="_blank"><span class="fab fa-linkedin-in"></span
                       ></a>
                                     </li>
                                 </ul>
                             </div>
                             <div class="lower-content">
                                 <h3>
-                                    <a href="" class="ts-image-popup">TBD...</a
+                                    <a href="" class="ts-image-popup">Love Babbar</a
                     >
                   </h3>
                   <div class="designation">
-                    
+                    Founder of CodeHelp
                   </div>
                 </div> 
 
@@ -200,19 +200,19 @@
             <div class="dots-one"></div>
             <div class="dots-two"></div>
             <div class="image">
-                <img src="sample.jpg" alt="" />
+                <img src="images/gl/lakshya_kumar.jpeg" alt="" />
                 <ul class="social-box">
                     <li>
-                        <a href="" target="_blank"><span class="fab fa-linkedin-in"></span
+                        <a href="https://www.linkedin.com/in/lakshayk12/?originalSubdomain=in" target="_blank"><span class="fab fa-linkedin-in"></span
                       ></a>
                     </li>
                 </ul>
             </div>
             <div class="lower-content">
                 <h3>
-                    <a href="" class="ts-image-popup">TBD...</a>
+                    <a href="" class="ts-image-popup">Lakshya Kumar</a>
                 </h3>
-                <div class="designation"></div>
+                <div class="designation">Instructor at CodeHelp</div>
             </div>
 
             <div id="popup_7" class="popup-content ts-speaker-popup mfp-hide">
