--- a/index.html
+++ b/index.html
@@ -333,7 +333,7 @@
     <!-- End Main Header -->
 
     <!-- Banner Section -->
-    <section class="banner-section" style="background-image: url(./loveBabbar.jpeg)">
+    <section class="banner-section" style="background-image: url(./images/loveBabbar.jpg)">
       <div class="banner-icons parallax-scene-1">
         <!-- Icon One -->
         <div data-depth="0.20" class="icon icon-one parallax-layer">
@@ -1863,11 +1863,11 @@
                   <img src="./codeHelp.png" alt="">
                   <img src="./cybrom.png" alt="">
                 </p>
-                <p id="mainHeading">Join us for an exclusive workshop featuring expert sessions by Lakshay Kumar and Love Babbar, curated by Cybrom.</p>
+                <p id="mainHeading">Join us for an exclusive workshop featuring expert sessions by <span style="color: orangered;">Lakshay Kumar</span>  and <span style="color: orangered;"> Love Babbar</span>, curated by Cybrom.</p>
                 <p id="deadlineDisc">⏰ Time's ticking! Register now. 🚀 Limited seats.</p>
                 <!-- <p id="disc">SCEECS 2024 is Here!</p> -->
                 <div id="btn">
-                    <a href="https://linktr.ee/IEEE_MANIT" target="_blank"><button>Register Now</button></a>
+                    <a href="https://linktr.ee/IEEE_MANIT" target="_blank"><button style="cursor: pointer;">Register Now</button></a>
                 </div>
             </div>
         </div>
